Fixed Home Display on Small Screens

--- a/client/src/components/Home/Home.scss
+++ b/client/src/components/Home/Home.scss
@@ -1,5 +1,4 @@
 .filter {
-  
   width: 400px;
 }
 
@@ -16,13 +15,13 @@
 }
 
 .sidebar {
-  height: 100%; 
-  width: 0; 
-  position: fixed; 
+  height: 100%;
+  width: 0;
+  position: fixed;
   top: 25px;
   left: 0;
-  overflow-x: hidden; 
-  padding-top: 60px; 
+  overflow-x: hidden;
+  padding-top: 60px;
 }
 
 .sidebar a {
@@ -33,7 +32,6 @@
   transition: 0.3s;
 }
 
-
 .sidebar .closebtn {
   position: absolute;
   top: 25px;
@@ -42,5 +40,6 @@
   margin-left: 50px;
 }
 
-.pointer       { cursor: pointer; }
-
+.pointer {
+  cursor: pointer;
+}
